# scout_mini_ros

./: README.md
scout_mini_base/: CMakeLists.txt  package.xml
scout_mini_base/config/: analyzers.yaml
scout_mini_base/include/scout_mini_base/: scout_mini_base.h
scout_mini_base/launch/: base.launch
scout_mini_base/launch/include/: d435.launch  mi.launch  sick_tim.launch
scout_mini_base/lib/: ros-melodic-scout-mini-lib_0.2.0-0bionic_amd64.deb  ros-melodic-scout-mini-lib_0.2.0-0bionic_arm64.deb
scout_mini_base/src/: scout_mini_base.cpp
scout_mini_control/: CMakeLists.txt  package.xml
scout_mini_control/config/: control.yaml  localization.yaml
scout_mini_control/launch/: control.launch
scout_mini_description/: CMakeLists.txt  package.xml
scout_mini_description/launch/: description.launch  rviz.launch
scout_mini_description/rviz/: scout_mini.rviz
scout_mini_description/urdf/: scout_mini.urdf.xacro
scout_mini_lib/: CMakeLists.txt  package.xml
scout_mini_lib/include/scout_mini_lib/: resource.h  scout_mini_can_bridge.h  scout_mini_controller.h  scout_mini_hardware.h
scout_mini_lib/src/: scout_mini_can_bridge.cpp  scout_mini_controller.cpp  scout_mini_hardware.cpp
scout_mini_msgs/: CMakeLists.txt  package.xml
scout_mini_msgs/msg/: DriverState.msg  LightCommand.msg  LightState.msg  MotorState.msg  RobotState.msg
scout_mini_navigation/: CMakeLists.txt  package.xml
scout_mini_navigation/config/: costmap_common.yaml  teb_local_planner.yaml
scout_mini_navigation/launch/: move_base.launch  navigation.launch  slam.launch
scout_mini_ros/: CMakeLists.txt  package.xml
