<?xml version="1.0"?>
<package format="2">
  <name>scout_mini_base</name>
  <version>0.2.2</version>
  <description>
    The package for Scout Mini base system
  </description>
  <maintainer email="shlee@roas.co.kr">Brighten Lee</maintainer>
  <maintainer email="sbyun@roas.co.kr">sbyun</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>controller_manager</depend>
  <depend>realtime_tools</depend>
  <depend>std_srvs</depend>
  <depend>std_msgs</depend>
  <depend>scout_mini_lib</depend>
  <depend>scout_mini_msgs</depend>
</package>