<?xml version="1.0"?>
<package format="2">
  <name>scout_mini_control</name>
  <version>0.2.0</version>
  <description>
    The controller package for Scout Mini
  </description>
  <maintainer email="shlee@roas.co.kr">Brighten Lee</maintainer>
  <maintainer email="sbyun@roas.co.kr">sbyun</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>ros_controllers</depend>
  <depend>twist_mux</depend>
  <depend>robot_localization</depend>
</package>