<?xml version="1.0"?>
<package format="2">
  <name>scout_mini_description</name>
  <version>0.2.1</version>
  <description>
    This package includes urdf files of Scout Mini
  </description>
  <maintainer email="shlee@roas.co.kr">Brighten Lee</maintainer>
  <maintainer email="sbyun@roas.co.kr">sbyun</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>urdf</depend>
  <depend>xacro</depend>
</package>