<?xml version="1.0"?>
<package format="2">
  <name>scout_mini_msgs</name>
  <version>0.2.1</version>
  <description>
    The messages for Scout Mini
  </description>
  <maintainer email="shlee@roas.co.kr">Brighten Lee</maintainer>
  <maintainer email="sbyun@roas.co.kr">sbyun</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
</package>