<?xml version="1.0"?>
<package format="2">
  <name>scout_mini_navigation</name>
  <version>0.0.0</version>
  <description>
    This package includes launch files for slam and navigation
  </description>
  <maintainer email="shlee@gaitech.co.kr">Brighten Lee</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend> 

</package>