<?xml version="1.0"?>
<package format="2">
  <name>scout_mini_ros</name>
  <version>0.2.2</version>
  <description>
    The meta package for Scout Mini
  </description>
  <maintainer email="shlee@roas.co.kr">Brighten Lee</maintainer>
  <maintainer email="sbyun@roas.co.kr">sbyun</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>scout_mini_base</exec_depend>
  <exec_depend>scout_mini_control</exec_depend>
  <exec_depend>scout_mini_description</exec_depend>
  <exec_depend>scout_mini_lib</exec_depend>
  <exec_depend>scout_mini_msgs</exec_depend>
  <export>
    <metapackage/>
  </export>
</package>